base/flask-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  namespace: servpy
spec:
  selector:
    matchLabels:
      app: flask-demo
  template:
    metadata:
      labels:
        app: flask-demo
    spec:
      imagePullSecrets:
        - name: harborsecret
      containers:
        - image: harbor.my.org:1080/python-app/flask-demo:latest
          name: flask-demo
          resources:
            limits:
              cpu: "2"
              memory: 4Gi
            requests:
              cpu: 200m
              memory: 2Gi
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 3
          readinessProbe:
            initialDelaySeconds: 20
            periodSeconds: 10
            httpGet:
              path: /
              port: 8080
